# ESP32-RC-car

./: .gitignore  README.md
App_P4/: Podfile
App_P4/Gata_RC/: ContentView.swift  GATA_RC_P4App.swift  VehicleControl.swift
App_P4/Gata_RC.xcodeproj/: project.pbxproj
App_P4/Gata_RC.xcworkspace/: contents.xcworkspacedata
App_P4/Gata_RC/AI/: MediaPipeVisionManager.swift  PIDController.swift  SIMDKalmanFilter.swift
App_P4/Gata_RC/Audio/: UDPAudioClient.swift
App_P4/Gata_RC/Core/: Constants.swift  NetHolder.swift
App_P4/Gata_RC/HUD/: HUDView.swift  Shapes.swift
App_P4/Gata_RC/Models/: AppModel.swift  DataModels.swift
App_P4/Gata_RC/Networking/: ControlUDPManager.swift  ControllerBridge.swift
App_P4/Gata_RC/UI/: AIOverlayView.swift  CyberText.swift  VideoViews.swift
App_P4/Gata_RC/Utilities/: ByteHelpers.swift  CRC16.swift  Threading.swift
App_P4/Gata_RC/Video/: HardwareH264Decoder.swift  UDPVideoClient.swift
GATA_S3/: CMakeLists.txt  sdkconfig.defaults
GATA_S3/components/s3_core/: CMakeLists.txt
GATA_S3/components/s3_core/include/: captive_portal.hpp  config.hpp  control_receiver.hpp  motor_control.hpp  network_mutex.hpp  protocol.hpp  telemetry.hpp  time_utils.hpp  video_bridge.hpp  wifi_ap.hpp
GATA_S3/components/s3_core/src/: captive_portal.cpp  config.cpp  control_receiver.cpp  motor_control.cpp  network_mutex.cpp  protocol.cpp  telemetry.cpp  time_utils.cpp  video_bridge.cpp  wifi_ap.cpp
GATA_S3/main/: CMakeLists.txt  main.cpp
